--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "lodash": "^3.10.1",
     "lolex": "^1.5.0",
     "mocha": "^2.0.1",
-    "react": "^0.14.2",
-    "react-addons-test-utils": "^0.14.2",
+    "react": "^0.14.2 || ^15.3.1",
+    "react-addons-test-utils": "^0.14.2 || ^15.3.1",
     "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
     "uglifyify": "~3.0",
@@ -60,7 +60,7 @@
     "lodash.isobject": "^3.0.0",
     "lodash.omit": "^4.0.0",
     "lodash.reduce": "^4.0.0",
-    "react-addons-update": "^15.3.1",
+    "react-addons-update": "^0.14.2 || ^15.3.1",
     "update-in": "0.0.1-alpha.5"
   }
 }
